# zero2prod

./: .dockerignore  Cargo.toml  DockerFile  DockerFile copy  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20250609093112_create_subscriptions_table.sql
proptest-regressions/domain/: subscriber_email.txt
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
