[package]
name = "zero2prod"
version = "0.2.2"
edition = "2021"
authors = ["Hiron Das <hcdas@outlook.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.15.11"
lettre = "0.11.17"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
]
[dev-dependencies]
claim = "0.5.0"
fake = "4.3.0"
proptest = "1.7.0"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
wiremock = "0.6.4"
reqwest = { version = "0.12.19", default-features = false, features = ["json", "rustls-tls"] }
maik = "0.2.0"
